<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earth_quake">Earthquake</string>
    <string name="weather">Weather</string>
    <string name="recent_earthquake">Recent Earthquake</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="earthquake_detail">Earthquake Detail</string>
    <string name="date_time">Date Time</string>
    <string name="coordinate">Coordinate: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="magnitude">Magnitude: </string>
    <string name="depth">Depth: </string>
    <string name="potential">potential: </string>
    <string name="felt">Felt:</string>
    <string name="still_working_for_this_feature">Still working for this feature</string>
    <string name="shake_map">Shake Map</string>
    <string name="something_is_wrong">Something is wrong, try again later</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="test">test</string>
    <string name="search_city_weather">Search City Weather</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="degree_celsius">°C</string>
    <string name="degree_fahrenheit">°F</string>
    <string name="https">https:</string>
    <string name="condition">condition</string>
    <string name="local_time">Local Time</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="temp_c">Temp C</string>
    <string name="temp_f">Temp F</string>
    <string name="air_quality">Air Quality</string>
    <string name="uv">UV</string>
    <string name="one">1</string>
    <string name="ion">Ion</string>
    <string name="a_hundred">110.0</string>
    <string name="humidity">Humidity</string>
</resources>